# oba

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
oba/: __init__.py  agent.py  agents.py  cli.py  configs.py  settings.py  vault.py
oba/ag/: __init__.py  _agent_manual_tests.py  agent.py  common.py  history.py  tool.py
oba/ag/history/: __init__.py  base.py  memory.py
oba/ag/memory/: __init__.py  base.py  ephemeral.py  sqlite.py
oba/ag/models/: __init__.py  _anthropic_manual_tests.py  _gemini_manual_test.py  _openai_manual_test.py  anthropic.py  completions.py  constants.py  message.py  model.py  openai.py  types.py
oba/ag/oai/: api.py
oba/ag/tests/: conftest.py  mock_openai.py  test_agent.py
oba/ag/tools/: __init__.py  perplexity.py  web_search.py
oba/prompts/: __init__.py  system_prompt.txt
src/oba/: agent.py  agents.py  cli.py  configs.py  semantic.py  tui.py  vault.py
src/oba/prompts/: __init__.py  smart_read_note.txt  system_prompt.txt
src/oba/tools/: fs.py
vault_example/: AGENTS.md  inbox.md
vault_example/daily/: 2025-03-03.md  2025-03-04.md  2025-03-06.md  2025-03-09.md  2025-03-10.md  2025-03-12.md  2025-03-14.md  2025-03-17.md  2025-03-19.md  2025-03-21.md  2025-03-23.md
vault_example/personal/: 250307_lisbon_itinerary.md  250311_sintra_daytrip.md  250316_remote_work_rules.md  250322_lisbon_closing_thoughts.md
vault_example/projects/: 250306_termflow_overview.md  250310_termflow_architecture.md  250312_termflow_cli-ux.md  250314_termflow_llm-evals.md  250319_termflow_launch-plan.md  250321_termflow_open-questions.md
