[project]
name = "oba"
version = "0.1.0"
description = "An Obsidian powered agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.1.4",
    "attrs>=25.4.0",
    "pydantic>=2.12.0",
]

[project.scripts]
oba = "oba.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
