[project]
name = "oba"
version = "0.1.0"
description = "An Obsidian powered agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "rich>=14.2.0",
    "ag",  # from workspace in ./packages/ag
    "textual>=6.6.0",
]

[project.scripts]
oba = "oba.cli:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
ag = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = false

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
